Revise README for Zai project and usage details
Updated README to reflect project name change and added detailed usage instructions, architecture overview, and team information.